# sekai

./: CMakeLists.txt  MBROLOIDSynth.cpp  MBROLOIDSynth.h  Makefile  README.md  SekaiContext.cpp  SekaiContext.h  VVDReader.cpp  VVDReader.cpp~  VVDReader.h  VVDReader.h~  audioio.cpp  audioio.h  bld  common.h  epr.cpp  epr.h  epr_buildmodel.cpp  epr_test.cpp  gitbuild  hzosc.h  indent  mfcc.cpp  mfcc.h  midi.cpp  midi.h  note.h  obOlaBuffer.cpp  obOlaBuffer.h  sekai.h  sysreq.txt  tag_version  test.vvd  test_mfcc.cpp  test_synth.cpp  vvd.h  vvd2wav.cpp  vvd2wav_new.cpp  wav2vvd.cpp  wav2vvd_new.cpp
debian/: changelog  control  copyright  docs  libsekai-dev.install  libsekai0.install
examples/mbrolaclone/: aki.pho  mbrola_dummy.cpp  voice_synth.cpp  voice_synth.h  voicebank_meta.cpp
examples/mbrolaclone/aki/: 1.vvd  2.vvd  3.vvd  4.vvd  5.vvd  segments.ini
examples/realtime_demo/: CMakeLists.txt  jack.cpp  jack.hpp  main.cpp  synth.cpp  synth.hpp  あいうえお.vvd
mbrola_dummy_for_espeak/: Makefile  aki.pho  espeak_mbrola_synth_de2  espeak_mbrola_transcribe_de2  mbrola_dummy.cpp  voice_synth.cpp  voice_synth.h  voicebank_meta.cpp  voicebank_meta.h
realtime_demo/: jack.cpp  main.cpp  midi.h  synth.cpp  synth.hpp
src/: OLABuffer.cpp  SekaiContext.cpp  VVDReader.cpp  WorldSynth2.cpp  audioio.cpp  common.cpp  epr.cpp  epr_buildmodel.cpp  epr_test.cpp  hzosc.cpp  mfcc.cpp  midi.cpp  test_mfcc.cpp  test_synth.cpp  vvd2wav.cpp  wav2vvd.cpp
src/sekai/: OLABuffer.h  SekaiContext.h  VVDReader.h  WorldSynth2.h  audioio.h  common.h  epr.h  hzosc.h  mfcc.h  midi.h  sekai.h  vvd.h
testvoice/: convert.py  do.vvd  fa.vvd  jsonlint.py  la.vvd  mi.vvd  re.vvd  si.vvd  sol.vvd  tmp.txt  voice.json
vvd/: 0.vvd  1.vvd  2.vvd  arctic_a0001.vvd
